# rocket_server

./: Cargo.toml  Rocket.toml
migrations/: 20230924025338_init.sql  20230924025431_founders.sql
src/: main.rs  pages.rs  sqlx_mod.rs
templates/: about.html.tera  base.html.tera  index.html.tera  nav.html.tera
templates/error/: 404.html.tera
